[package]
name = "wcxhead"
description = "Definitions of error codes, flags and callbacks for Total Commander packer plugins"
repository = "https://github.com/nabijaczleweli/wcxhead.rs"
documentation = "https://rawcdn.githack.com/nabijaczleweli/wcxhead.rs/doc/wcxhead/index.html"
readme = "README.md"
license = "MIT"
# Remember to also update in appveyor.yml
# Remember to push docs manually
version = "0.1.1"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]


[dependencies]
libc = "0.2"

[dependencies.winapi]
version = "0.3"
features = ["minwindef", "ntdef"]
